FIX: Align css to reflect AA media queries long practice Phase 1 project requirements

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,3 +53,9 @@ nav a.selected {
 }
 
 /* Your code here */
+/* Phase 1: Hide elements while printing */
+@media print {
+    nav {
+	display: none;
+    }
+}
